# chuk-mcp-design-system

./: .gitignore  MAKEFILE_REFERENCE.md  Makefile  README.md  USAGE.md  pyproject.toml
examples/: basic_usage.py  design_system_showcase.py  showcase_colors.py  showcase_interactive.html  showcase_motion.py  showcase_spacing.py  showcase_typography.py  showcase_visual.py
src/chuk_design_system/: __init__.py  server.py
src/chuk_design_system/exporters/: __init__.py  canva.py  css.py  json_export.py  pptx.py  remotion.py
src/chuk_design_system/themes/: __init__.py  base.py
src/chuk_design_system/themes/presets/: __init__.py  business.py  education.py  finance.py  gaming.py  lifestyle.py  minimal.py  tech.py
src/chuk_design_system/tokens/: __init__.py  colors.py  models.py  motion.py  spacing.py  typography.py
tests/: test_colors.py  test_exporters.py  test_motion.py  test_pptx_exporter.py  test_spacing.py  test_themes.py  test_tokens_init.py  test_typography.py
